--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+  body {background-color: coral;}
 <h1>Hello World </h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
