--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
+<style>
   body {background-color: coral;}
+</style>
+<body>
 <h1>Hello World </h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
