--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
 <!DOCTYPE html>
 <html>
+  <head>
+      <style>
+      section {
+           width: 250px;
+           background-color: green;
+           padding: 25px;
+           border: 10px solid blue;
+           margin: 25px;
+           }
+      </style>
+    </head>
+<body>
+
+   <section>Hello World</section>
+   <section id=b>Hello World</section>
+
+</body>
 <style>
   body {background-color: coral;}
 </style>
