--- a/index.html
+++ b/index.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      <style>
-      section {
-           width: 250px;
-           background-color: green;
-           padding: 25px;
-           border: 10px solid blue;
-           margin: 25px;
-           }
-      </style>
-    </head>
-<body>
-
-   <section>Hello World</section>
-   <section id=b>Hello World</section>
-
-</body>
 <style>
-  body {background-color: coral;}
+  ul.a {
+    list-style-type: circle;
+  }
+  .h1 {
+    font-family: Copperplate, Fantasy;
+  }
+  h1 {
+    font-size: 50px;
+    color: cornflowerblue;
+    text-align: center;
+    text-decoration-line: line-through;
+    text-decoration-color: coral
+  }
+  body {background-color: antiquewhite;}
 </style>
 <body>
-<h1>Hello World </h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>My Favorite Shows!</h1>
+<p>This is where we will learn the various shows Christian likes, including:
+<ul>
+  <li>Show name</li>
+  <li>Summary</li>
+  <li>Run Time</li>
+  <li>Cast</li>
+  <li>Ratings</li>
+  <li>Trivia</li>
+  <li>Theme Song</li>
+</ul>
+  
+</p>
 </body>
 </html>
