--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <style>
-  ul.a {
-    list-style-type: circle;
+  ol.a {
+    list-style-type: upper-roman;
   }
   .h1 {
     font-family: Copperplate, Fantasy;
@@ -14,12 +14,17 @@
     text-decoration-line: line-through;
     text-decoration-color: coral
   }
+  h2 {
+    font-size: 30px;
+    color: darkgoldenrod
+  }
   body {background-color: antiquewhite;}
 </style>
 <body>
 <h1>My Favorite Shows!</h1>
-<p>This is where we will learn the various shows Christian likes, including:
-<ul>
+<h2>This is where we will learn the various shows Christian likes, including:</h2>
+<p>
+<ol>
   <li>Show name</li>
   <li>Summary</li>
   <li>Run Time</li>
@@ -27,7 +32,9 @@
   <li>Ratings</li>
   <li>Trivia</li>
   <li>Theme Song</li>
-</ul>
+</ol>
+Down below you can find the link to iMDb for my favorite shows!!
+  <a href="https://www.imdb.com/user/ur126019820/ratings/?title_type=tv_series%2Ctv_miniseries&sort=my_ratings%2Cdesc"> TV ratings </a>
 </p>
 </body>
 </html>
