--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
     font-size: 30px;
     color: darkgoldenrod
   }
+  p {
+    font-size: 25px;
+    color: coral;
+    text-align: center;
+  }
   body {background-color: antiquewhite;}
 </style>
 <body>
 <h1>My Favorite Shows!</h1>
 <h2>This is where we will learn the various shows Christian likes, including:</h2>
-<p>
+<h3>
 <ol>
   <li>Show name</li>
   <li>Summary</li>
@@ -33,8 +38,8 @@
   <li>Trivia</li>
   <li>Theme Song</li>
 </ol>
-Down below you can find the link to iMDb for my favorite shows!!
-  <a href="https://www.imdb.com/user/ur126019820/ratings/?title_type=tv_series%2Ctv_miniseries&sort=my_ratings%2Cdesc"> TV ratings </a>
+</h3>
+<p>You can find the link <a href="https://www.imdb.com/user/ur126019820/ratings/?title_type=tv_series%2Ctv_miniseries&sort=my_ratings%2Cdesc"> TV ratings </a> to iMDb for my favorite shows!! 
 </p>
 </body>
 </html>
