--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
   }
   h1 {
     font-size: 50px;
-    color: cornflowerblue;
+    color: indigo;
     text-align: center;
     text-decoration-line: line-through;
-    text-decoration-color: coral
+    text-decoration-color: darkolivegreen
   }
   h2 {
     font-size: 30px;
-    color: darkgoldenrod
+    color: goldenrod
   }
   p {
     font-size: 25px;
-    color: coral;
+    color: darkolivegreen;
     text-align: center;
   }
-  body {background-color: antiquewhite;}
+  body {background-color: burlywood;}
 </style>
 <body>
 <h1>My Favorite Shows!</h1>
