--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
   }
   h1 {
     font-size: 50px;
-    color: indigo;
+    color: #f05133;
     text-align: center;
-    text-decoration-line: line-through;
-    text-decoration-color: darkolivegreen
+    text-decoration-line: underline;
+    text-decoration-color: #ffd200
   }
   h2 {
     font-size: 30px;
-    color: goldenrod
+    color: #9c5708
   }
   p {
     font-size: 25px;
     color: darkolivegreen;
     text-align: center;
   }
-  body {background-color: burlywood;}
+  body {background-color: #f79762;}
 </style>
 <body>
 <h1>My Favorite Shows!</h1>
