--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   }
   p {
     font-size: 25px;
-    color: darkolivegreen;
+    color: ##9c5708;
     text-align: center;
   }
-  body {background-color: #f79762;}
+  body {background-color: cornsilk;}
 </style>
 <body>
 <h1>My Favorite Shows!</h1>
