--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     list-style-type: upper-roman;
   }
   .h1 {
-    font-family: Copperplate, Fantasy;
+    font-family: Papyrus, Fantasy;
   }
+  .h2 {
+    font-family: Monaco, Monospace;
+  }
+  
   h1 {
     font-size: 50px;
     color: #f05133;
     text-align: center;
     text-decoration-line: underline;
-    text-decoration-color: #ffd200
+    text-decoration-color: #9c5708
   }
   h2 {
     font-size: 30px;
@@ -20,7 +24,7 @@
   }
   p {
     font-size: 25px;
-    color: ##9c5708;
+    color: #9c5708;
     text-align: center;
   }
   body {background-color: cornsilk;}
