--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-
-<body>
-  <style>
+<head>
+<style>
   ol.a {
     list-style-type: upper-roman;
 }
@@ -31,6 +30,8 @@
   }
   body {background-color: cornsilk;}
 </style>
+</head>
+<body>
 <h1>My Favorite Shows!</h1>
 <h2>This is where we will learn the various shows Christian likes, including:</h2>
 <h3>
