--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@
   ol.a {
     list-style-type: upper-roman;
 }
-.h1 {
-    font-family: Papyrus, Fantasy;
-}
-.h2 {
-    font-family: Monaco, Monospace;
-}
+
   
   h1 {
+    font-family: Papyrus, Fantasy;
     font-size: 50px;
     color: #f05133;
     text-align: center;
@@ -20,6 +16,7 @@
     text-decoration-color: #9c5708
   }
   h2 {
+    font-family: Monaco, Monospace
     font-size: 30px;
     color: #9c5708
   }
