--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     text-decoration-color: #9c5708
   }
   h2 {
-    font-family: Monaco, Monospace
+    font-family: Copperplate, Fantasy
     font-size: 30px;
     color: #9c5708
   }
   p {
+    font-family: "Courier New", Monospace
     font-size: 25px;
     color: #9c5708;
     text-align: center;
