--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     font-size: 30px;
     color: #9c5708
   }
+  h3 {
+    font-family: "Lucida Handwriting", Monospace;
+    color: #1e4d3d
+    font-weight: bold;
+  }
   p {
     font-family: "Courier New", Monospace;
     font-size: 25px;
@@ -36,14 +41,14 @@
 <ol>
   <li>Show name</li>
   <li>Summary</li>
-  <li>Run Time</li>
-  <li>Cast</li>
+  <li>Air Time</li>
+  <li>Cast & Crew</li>
   <li>Ratings</li>
   <li>Trivia</li>
   <li>Theme Song</li>
 </ol>
 </h3>
-<p>You can find the link <a href="https://www.imdb.com/user/ur126019820/ratings/?title_type=tv_series%2Ctv_miniseries&sort=my_ratings%2Cdesc"> here </a> to iMDb for my favorite shows!! 
+<p>You can find the link <a href="https://www.imdb.com/user/ur126019820/ratings/?title_type=tv_series%2Ctv_miniseries&sort=my_ratings%2Cdesc">here</a> to iMDb for my favorite shows!! 
 </p>
 </body>
 </html>
