--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ ol {
   <li>Theme Song</li>
 </ol>
 </h3>
-<p>You can find the link <a href="https://www.imdb.com/user/ur126019820/ratings/?title_type=tv_series%2Ctv_miniseries&sort=my_ratings%2Cdesc">here</a> to iMDb for my favorite shows!! 
+<p>You can find the link <a href="https://www.imdb.com/user/ur126019820/ratings/?title_type=tv_series%2Ctv_miniseries&sort=my_ratings%2Cdesc"target="_blank">here</a> to iMDb for my favorite shows!! 
 </p>
 </body>
 </html>
