--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@ ol {
     font-family: Copperplate, Fantasy;
     font-size: 30px;
     color: #9c5708
+    margin: 25px;
   }
   h3 {
     font-family: "Lucida Handwriting", Monospace;
     color: #1e4d3d
     font-weight: bold;
+    margin: 25px;
   }
   p {
     font-family: "Courier New", Monospace;
