--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@ ol {
     color: #f05133;
     text-align: center;
     text-decoration-line: underline;
-    text-decoration-color: #9c5708
+    text-decoration-color: #9c5708;
   }
   h2 {
     font-family: Copperplate, Fantasy;
     font-size: 30px;
-    color: #9c5708
+    color: #9c5708;
     margin: 25px;
   }
   h3 {
     font-family: "Lucida Handwriting", Monospace;
-    color: #1e4d3d
+    color: #1e4d3d;
     font-weight: bold;
     margin: 25px;
   }
