--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ ol {
     text-decoration-color: #9c5708;
   }
   h2 {
-    font-family: Copperplate, Fantasy;
+    font-family: Georgia, Serif;
     font-size: 30px;
     color: #9c5708;
     margin: 25px;
