--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 ol {
     list-style-type: upper-roman;
     margin: 40px;
-    font-family: "Lucida Handwriting", Monospace;
     
 }
 
@@ -25,7 +24,7 @@ ol {
     margin: 25px;
   }
   h3 {
-    font-family: "Lucida Handwriting", Monospace;
+    font-family: "Lucida Handwriting", Cursive;
     color: #1e4d3d;
     font-weight: bold;
     margin: 45px;
