--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ ol {
 <h2>This is where we will learn the various shows Christian likes, including:</h2>
 <h3>
 <ol>
-  <li><a href='#'>Show Name</a></li>
+  <li><a href="practice.html">Show Name</a></li>
   <li>Summary</li>
   <li>Air Time</li>
   <li>Cast & Crew</li>
