--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@ ol {
 <h2>This is where we will learn the various shows Christian likes, including:</h2>
 <h3>
 <ol>
-  <li><a href="practice.html">Show Name</a></li>
-  <li>Summary</li>
-  <li>Air Time</li>
-  <li>Cast & Crew</li>
-  <li>Ratings</li>
-  <li>Trivia</li>
-  <li>Theme Song</li>
+  <li><a href="shows.html">Show Name</a></li>
+  <li><a href="summaries.html">Summary</a></li>
+  <li><a href="chronology.html">Air Time</a></li>
+  <li><a href="castandcrew.html">Cast & Crew</a></li>
+  <li><a href="rating.html">Ratings</a></li>
+  <li><a href="facts.html">Trivia</a></li>
+  <li><a href="themes.html">Theme Song</a></li>
 </ol>
 </h3>
 <p>You can find the link <a href="https://www.imdb.com/user/ur126019820/ratings/?title_type=tv_series%2Ctv_miniseries&sort=my_ratings%2Cdesc"target="_blank">here</a> to iMDb for my favorite shows!! 
