--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Show & Share</title>
+<title>Show & Share 📺✏️</title>
 <style>
 ol {
     list-style-type: upper-roman;
