--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@ ol {
 
   
   h1 {
-    font-family: Papyrus, Fantasy;
+    font-family: "Bradley Hand, Cursive;
     font-size: 50px;
     color: #f05133;
     text-align: center;
-    text-decoration-line: underline;
+    text-decoration-line: overline underline;
     text-decoration-color: #9c5708;
   }
   h2 {
@@ -40,8 +40,20 @@ ol {
 </style>
 </head>
 <body>
-<h1>My Favorite Shows!</h1>
+<h1>Show & Share 📺✏️</h1>
 <h2>This is where we will learn the various shows Christian likes, including:</h2>
+<table>
+  <tr>
+    <td><a href="shows.html">Show Name</a></td>
+    <td><a href="summaries.html">Summary</a></td>
+    <td><a href="chronology.html">Air Time</a></td>
+    <td><a href="castandcrew.html">Cast & Crew</a></td>
+    <td><a href="rating.html">Ratings</a></td>
+    <td><a href="facts.html">Trivia</a></td>
+    <td><a href="themes.html">Theme Song</a></td>
+  </tr>
+  
+</table>
 <h3>
 <ol>
   <li><a href="shows.html">Show Name</a></li>
@@ -53,7 +65,7 @@ ol {
   <li><a href="themes.html">Theme Song</a></li>
 </ol>
 </h3>
-<p>You can find the link <a href="https://www.imdb.com/user/ur126019820/ratings/?title_type=tv_series%2Ctv_miniseries&sort=my_ratings%2Cdesc"target="_blank">here</a> to iMDb for my favorite shows!! 
-</p>
+<p>You can find the link <a href="https://www.imdb.com/user/ur126019820/ratings/?title_type=tv_series%2Ctv_miniseries&sort=my_ratings%2Cdesc"target="_blank">here</a> to iMDb for my favorite shows
+and some inspiration on your next watches 😁 </p>
 </body>
 </html>
