--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@ ol {
     
 }
 table, td {
-  border: 1px solid;
+    border: 1px solid;
+    width: 75%;
+    text-align: center;
+    background-color: sandybrown;
+    color: white;
 }
   
   h1 {
