--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ table, tr {
     background-color: sandybrown;
     color: white;
 }
+table.center {
+    margin: center;
   
   h1 {
     font-family: "Bradley Hand, Cursive;
