--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ table, tr {
     color: white;
 }
 table.center {
-    margin: center;
+    margin: auto;
   
   h1 {
     font-family: "Bradley Hand, Cursive;
