--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ table.center {
 <body>
 <h1>Show & Share 📺✏️</h1>
 <h2>This is where we will learn the various shows Christian likes, including:</h2>
-<table>
+<table class="center">
   <tr>
     <td><a href="shows.html">Show Name</a></td>
     <td><a href="summaries.html">Summary</a></td>
