--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@ ol {
     margin: 40px;
     
 }
-table, tr {
+table, tr, td {
     border: 1px solid;
     width: 75%;
     text-align: center;
     background-color: sandybrown;
-    color: white;
+    color: white
 }
 table.center {
     margin: auto;
