--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@ ol {
     margin: 40px;
     
 }
-table, tr, td {
+table, tr {
     border: 1px solid;
     width: 75%;
     text-align: center;
     background-color: sandybrown;
-    color: white
+    color: white;
 }
 table.center {
     margin: auto;
 
 }
+
   
   h1 {
     font-family: "Bradley Hand, Cursive;
