--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@ table, tr {
     width: 75%;
     text-align: center;
     background-color: sandybrown;
-    color: white;
+    
 }
 table.center {
     margin: auto;
 
 }
+tr.row {
+    color: white;
 
+}
   
   h1 {
     font-family: "Bradley Hand, Cursive;
@@ -54,7 +57,7 @@ table.center {
 <h1>Show & Share 📺✏️</h1>
 <h2>This is where we will learn the various shows Christian likes, including:</h2>
 <table class="center">
-  <tr>
+  <tr class="row">
     <td><a href="shows.html">Show Name</a></td>
     <td><a href="summaries.html">Summary</a></td>
     <td><a href="chronology.html">Air Time</a></td>
