--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ table.center {
     margin: auto;
 
 }
-tr.row {
+td.column {
     color: white;
 
 }
@@ -57,14 +57,14 @@ tr.row {
 <h1>Show & Share 📺✏️</h1>
 <h2>This is where we will learn the various shows Christian likes, including:</h2>
 <table class="center">
-  <tr class="row">
-    <td><a href="shows.html">Show Name</a></td>
-    <td><a href="summaries.html">Summary</a></td>
-    <td><a href="chronology.html">Air Time</a></td>
-    <td><a href="castandcrew.html">Cast & Crew</a></td>
-    <td><a href="rating.html">Ratings</a></td>
-    <td><a href="facts.html">Trivia</a></td>
-    <td><a href="themes.html">Theme Song</a></td>
+  <tr>
+    <td class="column"><a href="shows.html">Show Name</a></td>
+    <td class="column"><a href="summaries.html">Summary</a></td>
+    <td class="column"><a href="chronology.html">Air Time</a></td>
+    <td class="column"><a href="castandcrew.html">Cast & Crew</a></td>
+    <td class="column"><a href="rating.html">Ratings</a></td>
+    <td class="column"><a href="facts.html">Trivia</a></td>
+    <td class="column"><a href="themes.html">Theme Song</a></td>
   </tr>
   
 </table>
