--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ ol {
 }
 table, tr {
     border: 1px solid;
+    border-collapse: collapse;
     width: 75%;
     text-align: center;
     background-color: sandybrown;
