--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ table.center {
 </style>
 </head>
 <body>
-<h1>Show & Share 📺✏️</h1>
+<h1>"     Show & Share 📺✏️     "</h1>
 <h2>This is where we will learn the various shows Christian likes, including:</h2>
 <table class="center">
   <tr>
