--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ table.center {
 
   
   h1 {
-    font-family: "Bradley Hand, Cursive;
-    font-size: 50px;
+    font-family: "Bradley Hand", Cursive;
+    font-size: 100px;
     color: #f05133;
     text-align: center;
     text-decoration-line: overline underline;
@@ -56,7 +56,7 @@ table.center {
 </style>
 </head>
 <body>
-<h1>"     Show & Share 📺✏️     "</h1>
+<h1>          Show & Share 📺✏️          </h1>
 <h2>This is where we will learn the various shows Christian likes, including:</h2>
 <table class="center">
   <tr>
