--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ table.center {
     margin: auto;
 } 
 
-tr:hover {background-color: snow;}
+td:hover {background-color: snow;}
     
 h1 {
     font-family: "Bradley Hand", Cursive;
