--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ p {
 </style>   
 </head>    
 <body>    
-<h1>~~~~~~~~~~ Show & Share 📺✏️ ~~~~~~~~~~</h1>   
+<h1>~~~~~ Show & Share 📺✏️ ~~~~~</h1>   
 <h2>This is a place that you can not only rate and categorize the television shows you've watched, but also see your friends ratings for the same show!</h2>    
 <table class="center">
   <tr>
