--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 <title>Show & Share 📺✏️</title>
 <style>
 table, td, th {
-    border: 3px solid;         
+    border: 3px solid; 
+}
+
+table td a {
+    display: block;
+    padding: 0.25em 0 0.25em 0.5em;
+    text-decoration: none;
 }
     
 table {
