--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ p {
     <tr>
         <td2 class="column"><a href="index.html">Home</a></td2>
     </tr>
+</table2>
 <h2>This is a place that you can not only rate and categorize the television shows you've watched, but also see your friends ratings for the same show!</h2>    
 <table1 class="center">
   <tr>
