--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@ p {
 <h2>This is a place that you can not only rate and categorize the television shows you've watched, but also see your friends ratings for the same show!</h2>    
 <table1 class="center">
   <tr>
-    <td1 class="column"><a href="shows.html">Show Name</a></td>
-    <td1 class="column"><a href="summaries.html">Summary</a></td>
-    <td1 class="column"><a href="chronology.html">Air Time</a></td>
-    <td1 class="column"><a href="castandcrew.html">Cast & Crew</a></td>
-    <td1 class="column"><a href="rating.html">Ratings</a></td>
-    <td1 class="column"><a href="facts.html">Trivia</a></td>
-    <td1 class="column"><a href="themes.html">Theme Song</a></td>
+    <td1 class="column"><a href="shows.html">Show Name</a></td1>
+    <td1 class="column"><a href="summaries.html">Summary</a></td1>
+    <td1 class="column"><a href="chronology.html">Air Time</a></td1>
+    <td1 class="column"><a href="castandcrew.html">Cast & Crew</a></td1>
+    <td1 class="column"><a href="rating.html">Ratings</a></td1>
+    <td1 class="column"><a href="facts.html">Trivia</a></td1>
+    <td1 class="column"><a href="themes.html">Theme Song</a></td1>
   </tr> 
 </table1>
 <p>You can find the link <a href="https://www.imdb.com/user/ur126019820/ratings/?title_type=tv_series%2Ctv_miniseries&sort=my_ratings%2Cdesc"target="_blank">here</a> 
