--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@ h2 {
     text-align: center;
 } 
     
+h3 {
+    font-family: Georgia, Serif;
+    font-size: 10px;
+    text-align: right;
+} 
+    
 p {
     font-family: "Courier New", Monospace;
     font-size: 25px;
@@ -92,7 +98,8 @@ p {
     <td class="column"><a href="themes.html">Theme Song</a></td>
   </tr> 
 </table>
-<h2>This is a place that you can not only rate and categorize the television shows you've watched, but also see your friends ratings for the same show!</h2> 
+<h2>This is a place that you can not only rate and categorize the television shows you've watched, but also see your friends ratings for the same show!</h2>
+<h3><a<input type="password" value="secret" size="40">>Edit</a></h3>
 <p>You can find the link <a href="https://www.imdb.com/user/ur126019820/ratings/?title_type=tv_series%2Ctv_miniseries&sort=my_ratings%2Cdesc"target="_blank">here</a> 
     to iMDb for my favorite shows and some inspiration on your next watches 😁 </p>
 </body>
