--- a/index.html
+++ b/index.html
@@ -99,7 +99,12 @@ p {
   </tr> 
 </table>
 <h2>This is a place that you can not only rate and categorize the television shows you've watched, but also see your friends ratings for the same show!</h2>
-<h3><a<input type="password" value="secret" size="40">>Edit</a></h3>
+<h3>Here is the site to edit your background colors!<form action="edit.html">
+  <label for="pwd">Password:</label>
+  <input type="password" id="pwd" name="pwd" minlength="8"><br><br>
+  <input type="submit">
+</form>
+</h3>
 <p>You can find the link <a href="https://www.imdb.com/user/ur126019820/ratings/?title_type=tv_series%2Ctv_miniseries&sort=my_ratings%2Cdesc"target="_blank">here</a> 
     to iMDb for my favorite shows and some inspiration on your next watches 😁 </p>
 </body>
