--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ p {
                   alert("Type passcode")
                } else {
                   if (result == passcode) {
-                     <form action="edit.html"></form>
+                     <form action="edit.html"></form>;
                   } else {
                      alert("Incorrect Passcode");
                      location.reload();
