--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ p {
                   alert("Type passcode")
                } else {
                   if (result == passcode) {
-                     document.write("<center><h1><form action="edit.html"></form></h1></center>");
+                     action="edit.html";
                   } else {
                      alert("Incorrect Passcode");
                      location.reload();
