--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ p {
                   alert("Type passcode")
                } else {
                   if (result == passcode) {
-                     <a href="edit.html"><button onclick="protectpasscode()">CHECK</button></a>;
+                     <button href="edit.html">CHECK</botton></a>;
                   } else {
                      alert("Incorrect Passcode");
                      location.reload();
