--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+rch<!DOCTYPE html>
 <html>
 <head>
 <title>Show & Share Homepage</title>
@@ -69,7 +69,7 @@ p {
 <h2>This is a place that you can not only rate and categorize the television shows you've watched, but also see your friends ratings for the same show!</h2>
 <h2>Here is the site to edit your background colors!
     <input type="password" placeholder="passcode" id="tutorial">
-         <button onclick="protectpasscode()">CHECK</button>
+         
          <script>
             function protectpasscode() {
                const result = document.getElementById("tutorial").value;
@@ -79,7 +79,7 @@ p {
                   alert("Type passcode")
                } else {
                   if (result == passcode) {
-                     a<<button href="edit.html">>CHECK</botton></a>;
+                     a<href="edit.html">search</a>;
                   } else {
                      alert("Incorrect Passcode");
                      location.reload();
