--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@ p {
                   alert("Type passcode")
                } else {
                   if (result == passcode) {
-                     a<href="edit.html">search</a>;
+                     
+                     a<href="edit.html"><button onclick="protectpasscode()">Enter</button></a>;
                   } else {
                      alert("Incorrect Passcode");
                      location.reload();
