--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ p {
 <h2>This is a place that you can not only rate and categorize the television shows you've watched, but also see your friends ratings for the same show!</h2>
 <h2>Here is the site to edit your background colors!
     <input type="password" placeholder="passcode" id="tutorial">
-         
+    <button onclick="protectpasscode()">Enter</button>     
          <script>
             function protectpasscode() {
                const result = document.getElementById("tutorial").value;
@@ -79,8 +79,8 @@ p {
                   alert("Type passcode")
                } else {
                   if (result == passcode) {
+                     <button onclick="edit.html">Enter</button>;
                      
-                     a<href="edit.html"><button onclick="protectpasscode()">Enter</button></a>;
                   } else {
                      alert("Incorrect Passcode");
                      location.reload();
