--- a/index.html
+++ b/index.html
@@ -69,16 +69,23 @@ p {
 <h2>This is a place that you can not only rate and categorize the television shows you've watched, but also see your friends ratings for the same show!</h2>
 <h2>Here is the site to edit your background colors!
     <input type="password" placeholder="passcode" id="tutorial">
-    <button onclick="edit()">Enter</button>     
+         <button onclick="protectpasscode()">CHECK</button>
          <script>
-            function edit() {
-                const result = document.getElementById("tutorial").value;
-                let passcode = 12345;
-                if (result == passcode) { 
-                    onclick=<a href="edit.html">Enter</a>;
-                }
+            function protectpasscode() {
+               const result = document.getElementById("tutorial").value;
+               let passcode = 12345;
+               let space = '';
+               if (result == space) {
+                  alert("Type passcode")
+               } else {
+                  if (result == passcode) {
+                     document.open("https://www.google.com");
+                  } else {
+                     alert("Incorrect Passcode");
+                     location.reload();
+                  }
+               }
             }
-            
          </script>
   
 
