--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ p {
                   alert("Type passcode")
                } else {
                   if (result == passcode) {
-                     document.open("https://www.google.com");
+                     document.open("edit.html");
                   } else {
                      alert("Incorrect Passcode");
                      location.reload();
