--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ p {
                   alert("Type passcode")
                } else {
                   if (result == passcode) {
-                     href="edit.html";
+                     <a href="edit.html"></a>;
                   } else {
                      alert("Incorrect Passcode");
                      location.reload();
