--- a/index.html
+++ b/index.html
@@ -68,24 +68,15 @@ p {
 </table>
 <h2>This is a place that you can not only rate and categorize the television shows you've watched, but also see your friends ratings for the same show!</h2>
 <h2>Here is the site to edit your background colors!
-    <input type="password" placeholder="passcode" id="tutorial">
-         <button onclick="protectpasscode()">CHECK</button>
+        <input type="password" placeholder="passcode" id="tutorial">
          <script>
-            function protectpasscode() {
-               const result = document.getElementById("tutorial").value;
-               let passcode = 12345;
-               let space = '';
-               if (result == space) {
-                  alert("Type passcode")
-               } else {
-                  if (result == passcode) {
-                     <a href="edit.html"></a>;
-                  } else {
-                     alert("Incorrect Passcode");
-                     location.reload();
-                  }
-               }
+            const result = document.getElementById("tutorial").value
+            let passcode = 12345
+            let space = ''
+            if (result == passcode) {
+                <button onclick=<a href="edit.html">>Enter</a></button>
             }
+            
          </script>
   
 
