--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@ p {
 <h2>Here is the site to edit your background colors!
         <input type="password" placeholder="passcode" id="tutorial">
          <script>
-            const result = document.getElementById("tutorial").value
-            let passcode = 12345
-            let space = ''
+            const result = document.getElementById("tutorial").value;
+            let passcode = 12345;
+            let space = '';
             if (result == passcode) {
-                <button onclick=<a href="edit.html">>Enter</a></button>
+                <button onclick=<a href="edit.html">Enter></a></button>;
             }
             
          </script>
