--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ p {
 </table>
 <h2>This is a place that you can not only rate and categorize the television shows you've watched, but also see your friends ratings for the same show!</h2>
 <h2>Here is the site to edit your background colors!
+    <a href="edit.html">Edit</a>
         <script>
          var password = "tutorial";
          (function passcodeprotect() {
