--- a/index.html
+++ b/index.html
@@ -70,15 +70,16 @@ p {
 <h2>Here is the site to edit your background colors!
     <a href="edit.html">Edit</a>
         <script>
-         var password = "tutorial";
+         
          (function passcodeprotect() {
-            var passcode = prompt("Enter PassCode");
+            var passcode = prompt("Enter password");
             while (passcode !== password) {
-               alert("Incorrect PassCode");
+               alert("Incorrect password");
                return passcodeprotect();
             }
-         }());
-         alert('Welcome To The TP..!');
+         }())
+            var password = "christianh";
+         
       </script>
   
 
