--- a/index.html
+++ b/index.html
@@ -68,20 +68,20 @@ p {
 </table>
 <h2>This is a place that you can not only rate and categorize the television shows you've watched, but also see your friends ratings for the same show!</h2>
 <h2>Here is the site to edit your background colors!
+    <a href="edit.html"
     
-        <script>
-         var password = "christianh";
+       <script>
+         var password = "choltzman";
          (function passcodeprotect() {
-             <a href="edit.html">Edit</a>;
-            var passcode = prompt("Enter password");
+            var passcode = prompt("Enter PassCode");
             while (passcode !== password) {
-               alert("Incorrect password");
+               alert("Incorrect PassCode");
                return passcodeprotect();
             }
          }());
-         
+         alert('Welcome To The TP..!');
       </script>
-  
+      >Edit</a>
 
 </h2>
 <p>You can find the link <a href="https://www.imdb.com/user/ur126019820/ratings/?title_type=tv_series%2Ctv_miniseries&sort=my_ratings%2Cdesc"target="_blank">here</a> 
