--- a/edit.html
+++ b/edit.html
@@ -40,5 +40,6 @@
        }
        window.onload = function() { changeColor(); showValues(); }
      </script>
+      <a href="index.html">Home</a>
    </body>
 </head>
