--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ p {
     color: #9c5708;
     text-align: center;
 }    
-  body {background-color: cornsilk;}
+  body {background-image: url('edit.html');}
 </style>   
 </head>    
 <body>
