--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ p {
     color: #9c5708;
     text-align: center;
 }    
-  body {background-image: url('edit.html');}
+  body {background-color: href="edit.html";}
 </style>   
 </head>    
 <body>
