--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@ p {
     color: #9c5708;
     text-align: center;
 }    
-  body {background-color: href="edit.html";}
+    window.onload = function() {changeColor(); showValues();}
+  
 </style>   
 </head>    
 <body>
