--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@ p {
     color: #9c5708;
     text-align: center;
 }    
-    window.onload = function() {changeColor(); showValues();}
-  
+    
+  body {
+  background-color: lightblue;
+}
 </style>   
 </head>    
 <body>
