--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@ p {
 }    
     
   body {
-  background-color: changeColor();
+      <script>
+          window.onload = function() { changeColor(); showValues(); }      
+      </script>
+ 
 }
 </style>   
 </head>    
