--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ p {
     
   body {
       <script>
-          background-color: (window.onload = function() { changeColor(); showValues(); })      
+          background-color: (window.onload = function() { changeColor(); showValues(); });      
       </script>
  
 }
