--- a/index.html
+++ b/index.html
@@ -52,7 +52,22 @@ p {
     
   body {
       <script>
-          background-image: url("https://clholtz11.github.io/edit.html");     
+          background-color: 
+      (<script>
+       changeColor = function() {
+           red = document.querySelector('#redi').value;
+           green = document.querySelector('#greeni').value;
+           blue = document.querySelector('#bluei').value;
+           colorStr = "rgb(" + red + "," + green + "," + blue + ")";
+           document.body.style.backgroundColor = colorStr;
+       }
+       showValues = function() {
+         document.querySelector('#redv').innerHTML = document.querySelector("#redi").value;
+         document.querySelector('#greenv').innerHTML = document.querySelector("#greeni").value;
+         document.querySelector('#bluev').innerHTML = document.querySelector("#bluei").value;
+       }
+       window.onload = function() { changeColor(); showValues(); }
+     </script>;);     
       </script>
  
 }
