--- a/index.html
+++ b/index.html
@@ -51,24 +51,10 @@ p {
 }    
     
   body {
-      <script>
-          background-color: 
-      (<script>
-       changeColor = function() {
-           red = document.querySelector('#redi').value;
-           green = document.querySelector('#greeni').value;
-           blue = document.querySelector('#bluei').value;
-           colorStr = "rgb(" + red + "," + green + "," + blue + ")";
-           document.body.style.backgroundColor = colorStr;
-       }
-       showValues = function() {
-         document.querySelector('#redv').innerHTML = document.querySelector("#redi").value;
-         document.querySelector('#greenv').innerHTML = document.querySelector("#greeni").value;
-         document.querySelector('#bluev').innerHTML = document.querySelector("#bluei").value;
-       }
-       window.onload = function() { changeColor(); showValues(); }
-     </script>;);     
-      </script>
+      <head>
+    <title>inline style attribute</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
  
 }
 </style>   
