--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@ p {
   body {
      
     
-    background-color: <link href="edit.html" />;
-
+    document.body.style.backgroundColor = colorStr;
  
 }
 </style>   
