--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ table.center {
 } 
 
 td:hover {background-color: snow;}
+<link rel="stylesheet" href="https://clholtz11.github.io/edit.html">
     
 h1 {
     font-family: "Bradley Hand", Cursive;
@@ -49,11 +50,6 @@ p {
     color: #9c5708;
     text-align: center;
 }    
-    
-  body {
-         <body style="background-color: {{color}};">
- 
-}
 </style>   
 </head>    
 <body>
