--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html> 
 <html>
+<link rel="stylesheet" href="https://clholtz11.github.io/edit.html">
 <head>
 <title>Show & Share Homepage</title>
 <style>
@@ -27,7 +28,6 @@ table.center {
 } 
 
 td:hover {background-color: snow;}
-<link rel="stylesheet" href="https://clholtz11.github.io/edit.html">
     
 h1 {
     font-family: "Bradley Hand", Cursive;
@@ -72,4 +72,5 @@ p {
 <p>You can find the link <a href="https://www.imdb.com/user/ur126019820/ratings/?title_type=tv_series%2Ctv_miniseries&sort=my_ratings%2Cdesc"target="_blank">here</a> 
     to iMDb for my favorite shows and some inspiration on your next watches 😁 </p>
 </body>
+</link>
 </html>
