--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html> 
 <html>
-<link rel="stylesheet" href="https://clholtz11.github.io/edit.html">
 <head>
 <title>Show & Share Homepage</title>
+<link rel="stylesheet" href="style.css">
 <style>
     
 table, td, th {
@@ -72,5 +72,4 @@ p {
 <p>You can find the link <a href="https://www.imdb.com/user/ur126019820/ratings/?title_type=tv_series%2Ctv_miniseries&sort=my_ratings%2Cdesc"target="_blank">here</a> 
     to iMDb for my favorite shows and some inspiration on your next watches 😁 </p>
 </body>
-</link>
 </html>
