--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ p {
 }    
 </style>   
 </head>    
-<body onload="function()">
+<body onload="function()" src="/edit.html">
 <h1>~~~~~ 📺 Show & Share ✏️ ~~~~~</h1>     
 <table class="center">
   <tr>
