--- a/edit.html
+++ b/edit.html
@@ -41,6 +41,7 @@
        }
        window.onload = function() { changeColor(); showValues(); }
      </script>
-            <a href="index.html">Home</a>
+         <button onclick="changeColor()">Home</button>
+            
    </body>
 </head>
