--- a/edit.html
+++ b/edit.html
@@ -41,7 +41,7 @@
        }
        window.onload = function() { changeColor(); showValues(); }
      </script>
-         <button onclick="changeColor()">Home</button>
-            
+         <button onclick="changeColor()">Change Color</button>
+            <a href="index.html">Home</a> 
    </body>
 </head>
