--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Show & Share Homepage</title>
-
+<script type = "text/javascript" src="edit.html"></script>  
 <style>
     
 table, td, th {
