--- a/edit.html
+++ b/edit.html
@@ -40,8 +40,8 @@
          document.querySelector('#bluev').innerHTML = document.querySelector("#bluei").value;
        }
        window.onload = function() { changeColor(); showValues(); }
+      localStorage.bgcolor = document.body.style.backgroundColor;
      </script>
-         <button onclick="changeColor()">Change Color</button>
             <a href="index.html">Home</a> 
    </body>
 </head>
