--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html> 
 <html>
 <head>
-<title>Show & Share Homepage</title>
-<script type = "text/javascript" src="edit.html"></script>  
+<title>Show & Share Homepage</title>  
 <style>
     
 table, td, th {
@@ -52,7 +51,7 @@ p {
 }    
 </style>   
 </head>    
-<body onload="function()" src="/edit.html">
+<body>
 <h1>~~~~~ 📺 Show & Share ✏️ ~~~~~</h1>     
 <table class="center">
   <tr>
@@ -68,7 +67,6 @@ p {
 </table>
 <h2>This is a place that you can not only rate and categorize the television shows you've watched, but also see your friends ratings for the same show!</h2>
 <h2>Here is the site to edit your background colors! <a href="edit.html">Edit</a></h2>
-<h2><button onclick="function()">Save Changes</button></h2>
 <p>You can find the link <a href="https://www.imdb.com/user/ur126019820/ratings/?title_type=tv_series%2Ctv_miniseries&sort=my_ratings%2Cdesc"target="_blank">here</a> 
     to iMDb for my favorite shows and some inspiration on your next watches 😁 </p>
 </body>
