--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ p {
 </style>   
 </head>    
 <body>
+    var bgcolor = localStorage.bgcolor;
 <h1>~~~~~ 📺 Show & Share ✏️ ~~~~~</h1>     
 <table class="center">
   <tr>
