--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ p {
 </style>   
 </head>    
 <body>
-    var bgcolor = localStorage.bgcolor;
+    <script>var bgcolor = localStorage.bgcolor;</script>
 <h1>~~~~~ 📺 Show & Share ✏️ ~~~~~</h1>     
 <table class="center">
   <tr>
