--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ p {
     font-size: 25px;
     color: #9c5708;
     text-align: center;
-}    
+} 
+    document..style.backgroundColor=localStorage.bgcolor;
 </style>   
 </head>    
 <body>
