--- a/edit.html
+++ b/edit.html
@@ -42,6 +42,7 @@
        window.onload = function() { changeColor(); showValues(); }
       localStorage.bgcolor = document.body.style.backgroundColor;
      </script>
+         <button onclick="function()">Set Color</button>
             <a href="index.html">Home</a> 
    </body>
 </head>
