--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Show & Share Homepage</title>  
 <style>
-    
+document.style.backgroundColor=localStorage.bgcolor;    
 table, td, th {
     border: 3px solid; 
 }
@@ -49,7 +49,7 @@ p {
     color: #9c5708;
     text-align: center;
 } 
-    document..style.backgroundColor=localStorage.bgcolor;
+    
 </style>   
 </head>    
 <body>
