--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Show & Share Homepage</title>  
 <style>
-document.body.style.backgroundColor=localStorage.bgcolor;    
+background-color: localStorage.bgcolor;    
 table, td, th {
     border: 3px solid; 
 }
