--- a/edit.html
+++ b/edit.html
@@ -40,9 +40,10 @@
          document.querySelector('#bluev').innerHTML = document.querySelector("#bluei").value;
        }
        window.onload = function() { changeColor(); showValues(); }
-      localStorage.bgcolor = document.body.style.backgroundColor;
+      let color = document.body.style.backgroundColor;
+      color = localStorage.bgcolor;
      </script>
-         <button onclick="function()">Set Color</button>
+         <button onclick="color">Set Color</button>
             <a href="index.html">Home</a> 
    </body>
 </head>
