--- a/edit.html
+++ b/edit.html
@@ -31,14 +31,16 @@
            red = document.querySelector('#redi').value;
            green = document.querySelector('#greeni').value;
            blue = document.querySelector('#bluei').value;
-           colorStr = "rgb(" + red + "," + green + "," + blue + ")";
-           document.body.style.backgroundColor = colorStr;   
+           colorStr = "rgb(" + red + "," + green + "," + blue + ")";   
        }
        showValues = function() {
          document.querySelector('#redv').innerHTML = document.querySelector("#redi").value;
          document.querySelector('#greenv').innerHTML = document.querySelector("#greeni").value;
          document.querySelector('#bluev').innerHTML = document.querySelector("#bluei").value;
        }
+      function storeCurrentColor() { // Stores the current background color (which was stored in bgcolor) in localStorage
+    window.localStorage.setItem("bgcolor", colorStr);
+}
        window.onload = function() { changeColor(); showValues(); }
       let color = document.body.style.backgroundColor;
       color = localStorage.bgcolor;
