--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
 <title>Show & Share Homepage</title>  
 <style>
-background-color: localStorage.bgcolor;    
-table, td, th {
+function getCurrentColor() { 
+    bgcolor = window.localStorage.getItem("bgcolor");
+}
+function getAndSetCurrentColor() { 
+    getCurrentColor();
+    changeBgColor(bgcolor);
+    }
+   table, td, th {
     border: 3px solid; 
 }
 
