--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
 <title>Show & Share Homepage</title>  
 <style>
-function getCurrentColor() { 
-    bgcolor = window.localStorage.getItem("bgcolor");
+const color = localStorage.getItem('backgroundColor');
+if (color) {
+    document.body.style.backgroundColor = color;
 }
-function getAndSetCurrentColor() { 
-    getCurrentColor();
-    changeBgColor(bgcolor);
-    }
+
    table, td, th {
     border: 3px solid; 
 }
